--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
+    "nodemailer": "^7.0.6",
     "openai": "^5.20.2",
     "zod": "^3.25.76"
   }
